--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -15,12 +15,12 @@
 
 [[main]]
   name = "Publications"
-  url = "#featured"
+  url = "#publications"
   weight = 30
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
-# [[main]]
-#    name = "CV"
-#    url = "files/cv.pdf"
-#    weight = 70
+[[main]]
+  name = "CV"
+  url = "https://docs.google.com/document/d/17BP099QQbE52bp9ZXvGUDnK4vCyCNW5C-rxZ1pBa0ow"
+  weight = 40
